--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pytest = "^7.2.1"
 factory-boy = "^3.2.1"
 django = "^4.1.7"
 djangorestframework = "^3.14.0"
+django-extensions = "^3.2.1"
 
 
 [build-system]
