paginação e debug_toolbar

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ factory-boy = "^3.2.1"
 django = "^4.1.7"
 djangorestframework = "^3.14.0"
 django-extensions = "^3.2.1"
+django-debug-toolbar = "^3.8.1"
 
 
 [build-system]
